deploy/kubernetes-istio/manifest-networking/ingress-gateway-v1-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sockshop-gateway
  namespace: sock-shop
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sockshop
  namespace: sock-shop
spec:
  hosts:
  - "*"
  gateways:
  - sockshop-gateway
  http:
  - match:
    - headers:
        apiVersion:
          exact: v2
      uri: 
        prefix: /user
    route:
    - destination:
        host: user
        subset: v2
  - route:
    - destination:
        host: front-end
        subset: v1
      weight: 90
    - destination:
        host: front-end
        subset: v2
      weight: 10
